--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                         
                         <div class="col-6 col-md-8">
                             <ul class="list-inline m-0">
-                                <li class="py-2 border-top border-bottom"><i class="fa fa-check text-primary mr-3"></i>"البرنامج مجاني"</li>
-                                <li class="py-2 border-bottom"><i class="fa fa-check text-primary mr-3"></i>"تدرب نظري وعملي"</li>
-                                <li class="py-2 border-bottom"><i class="fa fa-check text-primary mr-3"></i>"تعليم عالي الجوده"</li>
+                                <li class="py-2 border-top border-bottom"><i class="fa fa-check text-primary mr-3"></i>البرنامج مجاني</li>
+                                <li class="py-2 border-bottom"><i class="fa fa-check text-primary mr-3"></i>تدرب نظري وعملي</li>
+                                <li class="py-2 border-bottom"><i class="fa fa-check text-primary mr-3"></i>تعليم عالي الجوده</li>
                             </ul>
                         </div>
                     </div>
