--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
                 <!-- <img src="img\001-letter-r.png" style="height: 80px; "> -->
-                <span class="text-primary">Robotak</span>
+                <span class="text-primary">روبوتاك</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
