--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5 about">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5">
