--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     <img class="img-fluid rounded mb-5 mb-lg-0" src="img/about-1.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <p class="section-title pr-5"><span class="pr-2">أعرف اكتر عنا</span></p>
+                    <p class="section-title pr-5 "><span class="pr-2 cpt">أعرف اكتر عنا</span></p>
                     <h1 class="mb-4">افضل برنامج لأطفالك</h1>
-                    <p>برنامج روبوتاك بيكون ل ٣ شرائح عمرة من ٧ الي ١٠ ومن ١٠ الي ١٤ ومن ١٤ الي ١٧ سنه علي مرحلتين لكل شريحة عمرية.
+                    <p >برنامج روبوتاك بيكون ل ٣ شرائح عمرة من ٧ الي ١٠ ومن ١٠ الي ١٤ ومن ١٤ الي ١٧ سنه علي مرحلتين لكل شريحة عمرية.
 المرحلة الأولي Online عن طريق فيديوهات في نهايتها يمنح المشارك شهادات معتمده من الأكاديمية العربية للعلوم والتكنولوجيا والنقل البحري، ووزارة الشباب والرياضة 📜 وبعدين  هيتعلموا تصميم نموذج روبوت علي برنامج قريب زي زوم برضه اون لاين للمساعده في تصنيع النموذج بدون إلكترونيات ثم تقييم الأعمال وافضل ٦٠ نمذوج هياخدوا شنط فيها مكونات الروبوت كامله علشان يكونوا مؤهلين للمرحلة التانية👌
 المرحلة التانية، هتكون Camps للتأهيل للمشاركة الفعالة في المسابقات الدولية للبرمجة والRobots للمتميزين بعد انتهاء فترة الاجراءات الاحترازية
 التكلفه الماليه تحملها وزارة الشباب والرياضة بالتعاون مع الأكاديمية البحرية للعلوم والتكنولوجيا والنقل البحري                    </p>
@@ -254,11 +254,11 @@
 
 
     <!-- Registration Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5 about">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
-                    <p class="section-title pr-5"><span class="pr-2">Book A Program</span></p>
+                    <p class="section-title pr-5"><span class="pr-2 cpt">Book A Program</span></p>
                     <h1 class="mb-4">Book A Program For Your Kid</h1>
                     <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor
                     </p>
